Update 11.Design the list.md

--- a/Travel app/lesson 12/11.Design the list.md
+++ b/Travel app/lesson 12/11.Design the list.md
@@ -56,15 +56,19 @@ export default TripItem;
 
 ```js
 import React from "react";
-import { View, StyleSheet, FlatList } from "react-native";
+import { StyleSheet, Text, View, Button, FlatList } from "react-native";
 
 import { COUNTRIES, TRIPS } from "../data/dummy-data";
+// 1. import:
 import TripItem from "../components/TripItem";
 
-const CountryTripScreen = (props) => {
-  const countryId = props.navigation.getParam("countryId");
-  const selectedCountry = COUNTRIES.find((country) => country.id === countryId);
+export default function CountryTripScreen({ route, navigation }) {
+  const { countryId } = route.params;
+  const displayedTrips = TRIPS.filter(
+    (trip) => trip.countryIds.indexOf(countryId) >= 0
+  );
 
+  // 2. 
   const renderTripItem = (itemData) => {
     return (
       <TripItem
@@ -77,40 +81,28 @@ const CountryTripScreen = (props) => {
       />
     );
   };
-
-  const displayedTrips = TRIPS.filter(
-    (trip) => trip.countryIds.indexOf(countryId) >= 0
-  );
-  console.log(displayedTrips);
+  
   return (
     <View style={styles.container}>
+      {/*  3.  */}
       <FlatList
         data={displayedTrips}
         keyExtractor={(item, index) => item.id}
         renderItem={renderTripItem}
         style={{ width: "100%" }}
       />
+
+
     </View>
   );
-};
-
-CountryTripScreen.navigationOptions = (navigationData) => {
-  const countryId = navigationData.navigation.getParam("countryId");
-  const selectedCountry = COUNTRIES.find((country) => country.id === countryId);
-
-  return {
-    headerTitle: selectedCountry.title,
-  };
-};
+}
 
 const styles = StyleSheet.create({
   container: {
     flex: 1,
-    padding: 10,
-    justifyContent: "center",
+    backgroundColor: "#fff",
     alignItems: "center",
+    justifyContent: "center",
   },
 });
-
-export default CountryTripScreen;
 ```
